Add links to recipe pages for chilaquiles rojo and chilaquiles verdes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/tacos-al-pastor.html">Tacos Al Pastor</a>
+        <ul>
+            <li><a href="recipes/tacos-al-pastor.html">Tacos Al Pastor</a></li>
+            <li><a href="recipes/chilaquiles-rojo.html">Chilaquiles Rojo</a></li>
+            <li><a href="recipes/chilaquiles-verdes.html">Chilaquiles Verdes</a></li>
+        </ul>
     </body>
 </html>
