--- a/recipes/tacos-al-pastor.html
+++ b/recipes/tacos-al-pastor.html
@@ -11,11 +11,11 @@
 
         <h2>Ingredients</h2>
         <ul>
-            <li>4 pounds pork shoulder (boneless)</li>
-            <li>3 guajillo chiles (dried)</li>
+            <li>4 pounds pork shoulder <em>(boneless)</em></li>
+            <li>3 guajillo chiles <em>(dried)</em></li>
             <li>1/4 cup orange juice</li>
             <li>1/4 cup lime juice</li>
-            <li>1 medium onion (roughly chopped)</li>
+            <li>1 medium onion <em>(roughly chopped)</em></li>
             <li>2 teaspoons ground cinnamon</li>
             <li>2 teaspoons ground Mexican oregano</li>
             <li>2 teaspoons ground cumin</li>
@@ -27,15 +27,23 @@
         <h2>To Serve</h2>
         <ul>
             <li>tortillas</li>
-            <li>1 pineapple (cleaned, cut into slices and grilled)</li>
-            <li>1/4 cup fresh cilantro(chopped)</li>
+            <li>1 pineapple <em>(cleaned, cut into slices and grilled)</em></li>
+            <li>1/4 cup fresh cilantro <em>(chopped)</em></li>
             <li>1 medium red onion</li>
-            <li>2 limes (cut into wedges)</li>
+            <li>2 limes <em>(cut into wedges)</em></li>
         </ul>
 
         <h2>Steps</h2>
-        <ul>
-            <li></li>
-        </ul>
+        <ol>
+            <li><b>Prepare the pork.</b> Using a sharp knife, cut the pork into thin ¼ inch slices. Place the pork slices in a large bowl.</li>
+            <li><b>Prep the peppers</b> Add the guajillo chiles to a pot with boiling water. Cover with lid and let them soak for about 5 minutes until they begin to soften. Transfer the chiles to a cutting board and carefully remove the seeds and stems. Set aside. I recommend using gloves.</li>
+            <li><b>Make the marinade.</b> To a blender add the guajillo chile, orange juice, lime juice, onion, cinnamon, pepper, Mexican oregano, cumin, achiote paste and salt. Blend everything together until it forms a smooth paste. If the paste is too thick, add a bit of the hot water that you used to soak the chiles and blend it in until combined.</li>
+            <li><b>Marinate the meat.</b> Pour the marinade over the pork and mix everything thoroughly together. Cover the bowl with plastic wrap and refrigerate for at least 4 hours to overnight. Remove the meat from the refrigerator 30 minutes before cooking.</li>
+            <li><b>Grill option.</b> Preheat your grill to medium-high heat and lightly grease it. Grill the meat for about 7 to 8 minutes per side or until slightly charred. An instant-read meat thermometer inserted into the center of the largest piece should read at least 145°F. Transfer the pork to a platter or baking sheet and grill the pineapple slices on both sides until slightly charred about 5 minutes per side.</li>
+            <li><b>Oven option.</b> Preheat the oven to 450°F. Line a baking pan that is narrower than your skewers with aluminum foil. You want to be able to prop your skewers on the baking sheet while cooking. A 9×13 inch pan usually works great if you're using 12-inch skewers.</li>
+            <li><b>Roast the meat in the oven.</b> Drizzle the top of the meat with some olive oil. Transfer the pan to the oven and bake for about 30 minutes or until the surface of the meat browns and you can see some charred bits. Might need to turn the broiler on for more charred bits. During the cooking process baste the meat with juices from pan.</li>
+            <li><b>Cut the meat.</b> Let the cooked meat rest for 5 minutes before cutting it up into bite size pieces.</li>
+            <li><b>Assemble the tacos and serve.</b> Serve on tacos with grilled pineapple, fresh cilantro, red onion, salsa, and lime wedges.</li>
+        </ol>
     </body>
 </html>
