Add descriptions to recipe webpages

--- a/recipes/chilaquiles-rojo.html
+++ b/recipes/chilaquiles-rojo.html
@@ -8,6 +8,10 @@
     <body>
         <h1>Chilaquiles Rojo</h1>
         <img src="../photos/chilaquiles-rojos.jpg" alt="a pink plate containing fried tortillas chips in a red salsa and topped with sliced onions, sliced radishes, cilantro, sour cream, and crumbled cheese" height="1800" width="1200">
+
+        <h2>Description</h2>
+        <p>This Chilaquiles recipe features crispy corn tortillas tossed in a flavorful red chile sauce and is topped with cheese, Mexican crema, and more!</p>
+        <p>Serve this Mexican comfort food for breakfast or brunch with a fried egg in less than 30 minutes.</p>
         
         <h2>Ingredients</h2>
         <ul>
