--- a/recipes/chilaquiles-verdes.html
+++ b/recipes/chilaquiles-verdes.html
@@ -9,6 +9,10 @@
         <h1>Chilaquiles Verdes</h1>
         <img src="../photos/chilaquiles-verdes.jpg" alt="White plate containing fried tortilla chips covered in green salsa and topped with cilantro, diced white onions, crumbled cheese, and sour cream" height="1800" width="1200"> 
 
+        <h2>Description</h2>
+        <p>Chilaquiles Verdes is a traditional Mexican dish made from lightly fried corn tortillas covered in a bright and flavorful salsa verde. Serve it for breakfast with a fried egg, or for lunch and dinner with a side of refried beans.</p>
+        <p>Ready in 30 minutes from start to finish, this recipe is gluten-free and vegetarian.</p>
+
         <h2>Ingredients</h2>
         <ul>
             <li>1 pound tomatillos <em>(husked and rinsed)</em></li>
