--- a/recipes/tacos-al-pastor.html
+++ b/recipes/tacos-al-pastor.html
@@ -9,6 +9,10 @@
         <h1>Tacos Al Pastor</h1>
         <img src="../photos/tacos-al-pastor.jpg" alt="Three al pastor tacos on a plate with grilled pineapple slices, slices of lime, and a small bowl of salsa verde sauce" height="1500" width="1200">
 
+        <h2>Description</h2>
+        <p>Tacos Al Pastor is a very popular dish which consists of marinated thin pork slices that are piled on top of each other and cooked on a vertical spit, called a trompo. As the pork cooks, the edges of the meat get charred. They are then carved directly from the spit and served in a tortilla. Seriously scrumptious!</p>
+        <p>The marinade is out of this world made with guajillo chiles, Mexican spices, achiote paste, and lots of citrus. The flavors of are <em>incredible.</em> They are juicy, smoky, tangy, sweet and a bit spicy. Enjoy this easy to make at home version!</p>
+     
         <h2>Ingredients</h2>
         <ul>
             <li>4 pounds pork shoulder <em>(boneless)</em></li>
